Fix failures due to incoming changes